--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "description": "",
   "version": "0.1.0",
   "dependencies": {
-    "serverless": "^1.51.0"
+    "serverless": "^1.51.0",
+    "serverless-s3-remover": "^0.6.0",
+    "serverless-s3-sync": "^1.9.0"
   },
   "devDependencies": {
     "serverless-python-requirements": "^5.0.0"
