--- a/serverless.yml
+++ b/serverless.yml
@@ -17,10 +17,16 @@ custom:
   bucket_glue: ${self:custom.unique_stack_name}-glue
   bucket_data: ${self:custom.unique_stack_name}
 
-  lambda_get_coinmarketcap_data: get_coinmarketcap_data
+  glue_role: arn:aws:iam::077590795309:role/glue-admin
+
+  bucket_glue_url: s3://${self:custom.bucket_glue}
+  
   glue_get_coinmarketcap_data: get_coinmarketcap_data
-  glue_get_coinmarketcap_data_script: s3://${self:custom.bucket_glue}/get_coinmarketcap_data.py
-  glue_get_coinmarketcap_data_libs: s3://${self:custom.bucket_glue}/libs
+  glue_get_coinmarketcap_data_script: ${self:custom.bucket_glue_url}/get_coinmarketcap_data.py
+  
+  glue_newcomers: newcomers
+  glue_newcomers_script: ${self:custom.bucket_glue_url}/newcomers.py
+  glue_get_coinmarketcap_data_libs: ${self:custom.bucket_glue_url}/libs
 
   s3Sync:
     - bucketName: ${self:custom.bucket_glue}
@@ -32,14 +38,14 @@ plugins:
   - serverless-s3-sync
 
 # functions:
-#   get_coinmarketcap_data:
-#     handler: serverless_crypto_analysis/lambda_function/get_coinmarketcap_data.handler
+#   newcomers:
+#     handler: serverless_crypto_analysis/lambda_function/newcomers.handler
 #     events:
 #       # Invoke Lambda function every minute
 #       - schedule: rate(1 hour)
 #     envrionment:
 #       BUCKET: ${self:custom.bucket_data}
-#       KEY: raw
+#       KEY: stg/newcomers
 
 resources:
   Resources:
@@ -54,7 +60,7 @@ resources:
     GlueJobGetCoinmarketcap:
       Type: AWS::Glue::Job
       Properties: 
-        Role: arn:aws:iam::077590795309:role/glue-admin
+        Role: ${self:custom.glue_role}
         Command:   
           Name: pythonshell
           PythonVersion: 3
@@ -70,4 +76,15 @@ resources:
         Actions:
           - JobName: ${self:custom.glue_get_coinmarketcap_data}
         Name: ${self:custom.glue_get_coinmarketcap_data}
-
+    GlueJobNewcomers:
+      Type: AWS::Glue::Job
+      Properties: 
+        Role: ${self:custom.glue_role}
+        Command:   
+          Name: pythonshell
+          PythonVersion: 3
+          ScriptLocation: ${self:custom.glue_newcomers_script}
+        Name: ${self:custom.glue_newcomers}
+        DefaultArguments:
+          --extra-py-files: ${self:custom.glue_get_coinmarketcap_data_libs}/pyarrow-0.14.1-cp36-cp36m-manylinux1_x86_64.whl,${self:custom.glue_get_coinmarketcap_data_libs}/requests-2.22.0-py2.py3-none-any.whl,${self:custom.glue_get_coinmarketcap_data_libs}/s3fs-0.3.4-py3-none-any.whl
+ 
