--- a/serverless.yml
+++ b/serverless.yml
@@ -75,83 +75,83 @@ resources:
         Actions:
           - JobName: ${self:custom.glue_get_coinmarketcap_data}
         Name: ${self:custom.glue_get_coinmarketcap_data}
-    GlueJobNewcomers:
-      Type: AWS::Glue::Job
-      Properties: 
-        Role: ${self:custom.glue_role}
-        Command:   
-          Name: pythonshell
-          PythonVersion: 3
-          ScriptLocation: ${self:custom.glue_newcomers_script}
-        Name: ${self:custom.glue_newcomers}
-        DefaultArguments:
-          --extra-py-files: ${self:custom.glue_get_coinmarketcap_data_libs}/pyarrow-0.14.1-cp36-cp36m-manylinux1_x86_64.whl,${self:custom.glue_get_coinmarketcap_data_libs}/requests-2.22.0-py2.py3-none-any.whl,${self:custom.glue_get_coinmarketcap_data_libs}/s3fs-0.3.5-py3-none-any.whl
-        ExecutionProperty:
-          MaxConcurrentRuns: 4
-    GlueTriggerNewcomers100:
-      Type: AWS::Glue::Trigger
-      Properties:
-        Type: CONDITIONAL
-        Actions:
-          - JobName: !Ref GlueJobNewcomers
-            Arguments:
-              --bucket: ${self:custom.bucket_data}
-              --source_key: raw/coinmarketcap_data
-              --dest_key_json: stg/newcomers/top_100/json
-              --dest_key_parquet: stg/newcomers/top_100/parquet
-              --rank: 100
-        Name: ${self:custom.glue_newcomers}-100
-        Predicate:
-          Conditions:
-            - LogicalOperator: EQUALS
-              JobName: !Ref GlueJobGetCoinmarketcapData
-              State: SUCCEEDED
-    GlueTriggerNewcomersOnDemand:
-      Type: AWS::Glue::Trigger
-      Properties:
-        Type: ON_DEMAND
-        Actions:
-          - JobName: !Ref GlueJobNewcomers
-            Arguments:
-              --bucket: ${self:custom.bucket_data}
-              --source_key: raw/coinmarketcap_data
-              --dest_key_json: stg/newcomers/top_100/json
-              --dest_key_parquet: stg/newcomers/top_100/parquet
-              --rank: 100
-        Name: ${self:custom.glue_newcomers}-100-on-demand
-    GlueTriggerNewcomers200:
-      Type: AWS::Glue::Trigger
-      Properties:
-        Type: CONDITIONAL
-        Actions:
-          - JobName: !Ref GlueJobNewcomers
-            Arguments:
-              --bucket: ${self:custom.bucket_data}
-              --source_key: raw/coinmarketcap_data
-              --dest_key_json: stg/newcomers/top_200/json
-              --dest_key_parquet: stg/newcomers/top_200/parquet
-              --rank: 200
-        Name: ${self:custom.glue_newcomers}-200
-        Predicate:
-          Conditions:
-            - LogicalOperator: EQUALS
-              JobName: !Ref GlueJobGetCoinmarketcapData
-              State: SUCCEEDED
-    GlueTriggerNewcomers50:
-      Type: AWS::Glue::Trigger
-      Properties:
-        Type: CONDITIONAL
-        Actions:
-          - JobName: !Ref GlueJobNewcomers
-            Arguments:
-              --bucket: ${self:custom.bucket_data}
-              --source_key: raw/coinmarketcap_data
-              --dest_key_json: stg/newcomers/top_50/json
-              --dest_key_parquet: stg/newcomers/top_50/parquet
-              --rank: 50
-        Name: ${self:custom.glue_newcomers}-50
-        Predicate:
-          Conditions:
-            - LogicalOperator: EQUALS
-              JobName: !Ref GlueJobGetCoinmarketcapData
-              State: SUCCEEDED
+#    GlueJobNewcomers:
+#      Type: AWS::Glue::Job
+#      Properties:
+#        Role: ${self:custom.glue_role}
+#        Command:
+#          Name: pythonshell
+#          PythonVersion: 3
+#          ScriptLocation: ${self:custom.glue_newcomers_script}
+#        Name: ${self:custom.glue_newcomers}
+#        DefaultArguments:
+#          --extra-py-files: ${self:custom.glue_get_coinmarketcap_data_libs}/pyarrow-0.14.1-cp36-cp36m-manylinux1_x86_64.whl,${self:custom.glue_get_coinmarketcap_data_libs}/requests-2.22.0-py2.py3-none-any.whl,${self:custom.glue_get_coinmarketcap_data_libs}/s3fs-0.3.5-py3-none-any.whl
+#        ExecutionProperty:
+#          MaxConcurrentRuns: 4
+#    GlueTriggerNewcomers100:
+#      Type: AWS::Glue::Trigger
+#      Properties:
+#        Type: CONDITIONAL
+#        Actions:
+#          - JobName: !Ref GlueJobNewcomers
+#            Arguments:
+#              --bucket: ${self:custom.bucket_data}
+#              --source_key: raw/coinmarketcap_data
+#              --dest_key_json: stg/newcomers/top_100/json
+#              --dest_key_parquet: stg/newcomers/top_100/parquet
+#              --rank: 100
+#        Name: ${self:custom.glue_newcomers}-100
+#        Predicate:
+#          Conditions:
+#            - LogicalOperator: EQUALS
+#              JobName: !Ref GlueJobGetCoinmarketcapData
+#              State: SUCCEEDED
+#    GlueTriggerNewcomersOnDemand:
+#      Type: AWS::Glue::Trigger
+#      Properties:
+#        Type: ON_DEMAND
+#        Actions:
+#          - JobName: !Ref GlueJobNewcomers
+#            Arguments:
+#              --bucket: ${self:custom.bucket_data}
+#              --source_key: raw/coinmarketcap_data
+#              --dest_key_json: stg/newcomers/top_100/json
+#              --dest_key_parquet: stg/newcomers/top_100/parquet
+#              --rank: 100
+#        Name: ${self:custom.glue_newcomers}-100-on-demand
+#    GlueTriggerNewcomers200:
+#      Type: AWS::Glue::Trigger
+#      Properties:
+#        Type: CONDITIONAL
+#        Actions:
+#          - JobName: !Ref GlueJobNewcomers
+#            Arguments:
+#              --bucket: ${self:custom.bucket_data}
+#              --source_key: raw/coinmarketcap_data
+#              --dest_key_json: stg/newcomers/top_200/json
+#              --dest_key_parquet: stg/newcomers/top_200/parquet
+#              --rank: 200
+#        Name: ${self:custom.glue_newcomers}-200
+#        Predicate:
+#          Conditions:
+#            - LogicalOperator: EQUALS
+#              JobName: !Ref GlueJobGetCoinmarketcapData
+#              State: SUCCEEDED
+#    GlueTriggerNewcomers50:
+#      Type: AWS::Glue::Trigger
+#      Properties:
+#        Type: CONDITIONAL
+#        Actions:
+#          - JobName: !Ref GlueJobNewcomers
+#            Arguments:
+#              --bucket: ${self:custom.bucket_data}
+#              --source_key: raw/coinmarketcap_data
+#              --dest_key_json: stg/newcomers/top_50/json
+#              --dest_key_parquet: stg/newcomers/top_50/parquet
+#              --rank: 50
+#        Name: ${self:custom.glue_newcomers}-50
+#        Predicate:
+#          Conditions:
+#            - LogicalOperator: EQUALS
+#              JobName: !Ref GlueJobGetCoinmarketcapData
+#              State: SUCCEEDED
