--- a/serverless.yml
+++ b/serverless.yml
@@ -6,6 +6,7 @@ provider:
   runtime: python3.6
   region: eu-central-1
   stage: ${opt:stage, "dev"}
+  role: arn:aws:iam::077590795309:role/serverless-crypto-analysis-prd-eu-central-1-lambdaRole
 
 package:
   excludeDevDependencies: true
@@ -19,7 +20,7 @@ custom:
   unique_stack_name: ${self:service}-${self:provider.stage}
   bucket_glue: ${self:custom.unique_stack_name}-glue
   bucket_data: ${self:custom.unique_stack_name}
-
+  key_raw_coinmarketcap: raw/coinmarketcap_data
   glue_role: arn:aws:iam::077590795309:role/glue-admin
 
   bucket_glue_url: s3://${self:custom.bucket_glue}
@@ -49,13 +50,12 @@ functions:
           bucket: ${self:custom.bucket_data}
           event: s3:ObjectCreated:*
           rules:
-            - prefix: raw/coinmarketcap_data
+            - prefix: ${self:custom.key_raw_coinmarketcap}
             - suffix: .parquet
-    # you can specify environment variables specifically for this lambda function
     environment:
         ATHENA_DB: coinmarketcap
-        ATHENA_TABLE: coinmarketcap_data
-        BUCKET_DATA: serverless-crypto-analysis-stg
+        ATHENA_TABLE: prd_coinmarketcap_data
+        BUCKET_DATA: ${self:custom.bucket_data}
         KEY_DATA: stg/newcomers
         RANK: "[200,100,75,50,40,30,20,10,5]"
     timeout: 900
@@ -66,10 +66,6 @@ resources:
       Type: AWS::S3::Bucket
       Properties:
         BucketName: ${self:custom.bucket_glue}
-    S3DataBucket:
-      Type: AWS::S3::Bucket
-      Properties:
-        BucketName: ${self:custom.bucket_data}
     GlueJobGetCoinmarketcapData:
       Type: AWS::Glue::Job
       Properties: 
@@ -81,6 +77,8 @@ resources:
         Name: ${self:custom.glue_get_coinmarketcap_data}
         DefaultArguments:
           --extra-py-files: ${self:custom.glue_get_coinmarketcap_data_libs}/pyarrow-0.14.1-cp36-cp36m-manylinux1_x86_64.whl,${self:custom.glue_get_coinmarketcap_data_libs}/requests-2.22.0-py2.py3-none-any.whl,${self:custom.glue_get_coinmarketcap_data_libs}/s3fs-0.3.4-py3-none-any.whl
+          --bucket: ${self:custom.bucket_data}
+          --key: ${self:custom.key_raw_coinmarketcap}
     GlueTriggerGetCoinmarketcapData:
       Type: AWS::Glue::Trigger
       Properties:
@@ -88,6 +86,9 @@ resources:
         Schedule: cron(0 * * * ?)        
         Actions:
           - JobName: ${self:custom.glue_get_coinmarketcap_data}
+            Arguments:
+              --bucket: ${self:custom.bucket_data}
+              --key: ${self:custom.key_raw_coinmarketcap}
         Name: ${self:custom.glue_get_coinmarketcap_data}
 #    GlueJobNewcomers:
 #      Type: AWS::Glue::Job
