--- a/Pipfile
+++ b/Pipfile
@@ -4,22 +4,24 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
-s3fs = "==0.3.4"
-fastparquet = "==0.3.2"
-pandas = "*"
-boto3 = "*"
-nose = "*"
-pytest = "*"
-pyathena = "*"
-pyarrow = "*"
+#s3fs = "==0.3.4"
+#fastparquet = "==0.3.2"
+#pandas = "*"
+#boto3 = "*"
+#nose = "*"
+#pytest = "*"
+#pyathena = "*"
+#pyarrow = "*"
 requests = "==2.22.0"
 coinmarketcap = "==4.2.1"
+awswrangler= "==0.2.1"
+moto= "==1.3.14"
 
 [packages]
-boto3 = "*"
-retrying = "*"
-twython = "*"
-loguru = "*"
+boto3 = "==1.10.44"
+retrying = "==1.3.3"
+twython = "==3.7.0"
+loguru = "==0.4.0"
 
 [requires]
 python_version = "3.6"
