--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "version": "0.1.0",
   "dependencies": {
     "serverless": "^1.61.2",
-    "serverless-s3-remover": "^0.6.0",
     "serverless-s3-sync": "^1.9.0"
   },
   "devDependencies": {
-    "serverless-python-requirements": "^5.0.1"
+    "serverless-python-requirements": "^5.0.1",
+    "serverless-s3-remover": "^0.6.0"
   }
 }
