--- a/serverless.yml
+++ b/serverless.yml
@@ -10,17 +10,17 @@ provider:
 
 package:
   excludeDevDependencies: true
-#  exclude:
-#    - "*/**"
   exclude:
-    - 'node_modules/**'
-    - 'serverless_crypto_analysis_tests/**'
+    - "node_modules/**"
+    - "serverless_crypto_analysis_tests/**"
+    - "layers/**"
 
 custom:
   unique_stack_name: ${self:service}-${self:provider.stage}
   bucket_glue: ${self:custom.unique_stack_name}-glue
   bucket_data: ${self:custom.unique_stack_name}
-  key_raw_coinmarketcap: raw/coinmarketcap_data
+  key_raw_coinmarketcap: raw
+  key_stg_filter_for_newcomers: stg/filter_for_newcomers
   key_stg_newcomers: stg/newcomers
   glue_role: arn:aws:iam::077590795309:role/glue-admin
 
@@ -42,6 +42,7 @@ plugins:
   - serverless-s3-remover
   - serverless-s3-sync
   - serverless-python-requirements
+
 functions:
   get_coinmarketcap_data:
     handler: serverless_crypto_analysis/lambda_function/get_coinmarketcap_data.lambda_handler
@@ -51,6 +52,22 @@ functions:
       DESTINATION_BUCKET: ${self:custom.bucket_data}
       DESTINATION_KEY: raw
 #    timeout: 900
+  filter_for_newcomers:
+    handler: serverless_crypto_analysis/lambda_function/filter_for_newcomers.lambda_handler
+    events:
+      - s3:
+          bucket: ${self:custom.bucket_data}
+          event: s3:ObjectCreated:*
+          rules:
+            - prefix: ${self:custom.key_raw_coinmarketcap}
+            - suffix: .json
+    environment:
+      DESTINATION_BUCKET: ${self:custom.bucket_data}
+      DESTINATION_KEY: ${self:custom.key_stg_filter_for_newcomers}
+    layers:
+      # we reference the version that is manually uploaded
+      - arn:aws:lambda:eu-central-1:077590795309:layer:awswrangler:1
+
   newcomers:
     handler: serverless_crypto_analysis/lambda_function/newcomers.lambda_handler
     events:
@@ -68,12 +85,12 @@ functions:
       RANK: "[]"
     timeout: 900
 
-layers:
-  awswrangler:
-    path: layers
-    name: ${self:provider.stage}-awswrangler
-    compatibleRuntimes:
-      - python3.8
+#layers:
+#  awswrangler:
+#    path: layers
+#    name: ${self:provider.stage}-awswrangler
+#    compatibleRuntimes:
+#      - python3.8
 
 #  tweet_newcomers:
 #    handler: serverless_crypto_analysis/lambda_function/tweets.lambda_handler
