--- a/Pipfile
+++ b/Pipfile
@@ -8,13 +8,13 @@ requests = "==2.22.0"
 coinmarketcap = "==4.2.1"
 awswrangler= "==0.2.1"
 moto= "==1.3.14"
+isort = "==4.3.21"
 
 [packages]
 requests = "==2.22.0"
 boto = "*"
 loguru = "*"
 retrying = "==1.3.3"
-
 
 [requires]
 python_version = "3.8"
