--- a/serverless.yml
+++ b/serverless.yml
@@ -77,7 +77,7 @@ functions:
       ATHENA_TABLE: stg_filter_for_newcomers
       BUCKET_DATA: ${self:custom.bucket_data}
       KEY_DATA: ${self:custom.key_stg_newcomers}
-      RANK: "[200,100,75,50,40,30,20,10]"
+      RANK: "[100]"
     timeout: 900
   tweet_newcomers:
     handler: serverless_crypto_analysis/lambda_function/tweets.lambda_handler
@@ -99,6 +99,7 @@ functions:
       ATHENA_TABLE: stg_filter_for_newcomers
       FUNCTION_NAME: ${self:custom.glue_newcomers}
       YEAR: 2020
+      LOOKBACK_PERIOD: 86400 # 24 hours
     timeout: 900
     layers:
       # we reference the version that is manually uploaded
