--- a/serverless.yml
+++ b/serverless.yml
@@ -77,7 +77,8 @@ functions:
       ATHENA_TABLE: stg_filter_for_newcomers
       BUCKET_DATA: ${self:custom.bucket_data}
       KEY_DATA: ${self:custom.key_stg_newcomers}
-      RANK: "[100]"
+      RANK: "[200,100,75,50,25,10]"
+      LOOKBACK_PERIOD: 21600 # 6 hours
     timeout: 900
   tweet_newcomers:
     handler: serverless_crypto_analysis/lambda_function/tweets.lambda_handler
@@ -105,54 +106,3 @@ functions:
     layers:
       # we reference the version that is manually uploaded
       - arn:aws:lambda:eu-central-1:077590795309:layer:awswrangler:1
-
-#layers:
-#  awswrangler:
-#    path: layers
-#    name: ${self:provider.stage}-awswrangler
-#    compatibleRuntimes:
-#      - python3.8
-
-#  tweet_newcomers:
-#    handler: serverless_crypto_analysis/lambda_function/tweets.lambda_handler
-#    events:
-#      - s3:
-#          bucket: ${self:custom.bucket_data}
-#          event: s3:ObjectCreated:*
-#          rules:
-#            - prefix: ${self:custom.key_stg_newcomers}
-#            - suffix: .json
-#    environment:
-#      TWITTER_TOKEN: twitter_token
-#      COINMARKETCAP_TOKEN: coinmarketcap_token
-#    timeout: 900
-#resources:
-#  Resources:
-#    S3GlueBucket:
-#      Type: AWS::S3::Bucket
-#      Properties:
-#        BucketName: ${self:custom.bucket_glue}
-#    GlueJobGetCoinmarketcapData:
-#      Type: AWS::Glue::Job
-#      Properties:
-#        Role: ${self:custom.glue_role}
-#        Command:
-#          Name: pythonshell
-#          PythonVersion: 3
-#          ScriptLocation: ${self:custom.glue_get_coinmarketcap_data_script}
-#        Name: ${self:custom.glue_get_coinmarketcap_data}
-#        DefaultArguments:
-#          --extra-py-files: ${self:custom.glue_get_coinmarketcap_data_libs}/requests-2.22.0-py2.py3-none-any.whl,${self:custom.glue_get_coinmarketcap_data_libs}/awswrangler-0.2.1-glue-none-any.whl
-#          --bucket: ${self:custom.bucket_data}
-#          --key: ${self:custom.key_raw_coinmarketcap}
-#    GlueTriggerGetCoinmarketcapData:
-#      Type: AWS::Glue::Trigger
-#      Properties:
-#        Type: SCHEDULED
-#        Schedule: cron(0 * * * ?)
-#        Actions:
-#          - JobName: ${self:custom.glue_get_coinmarketcap_data}
-#            Arguments:
-#              --bucket: ${self:custom.bucket_data}
-#              --key: ${self:custom.key_raw_coinmarketcap}
-#        Name: ${self:custom.glue_get_coinmarketcap_data}
