--- a/Pipfile
+++ b/Pipfile
@@ -12,9 +12,9 @@ isort = "==4.3.21"
 
 [packages]
 requests = "==2.22.0"
-boto = "*"
-loguru = "*"
+loguru = "==0.4.1"
 retrying = "==1.3.3"
+twython = "==3.7.0"
 
 [requires]
 python_version = "3.8"
